<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.apidesign</groupId>
  <artifactId>bck2brwsr</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Back 2 Browser</name>
  <parent>
    <groupId>net.java</groupId>
    <artifactId>jvnet-parent</artifactId>
    <version>3</version>
  </parent>  
  <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <netbeans.version>RELEASE120-u1</netbeans.version>
      <license>COPYING</license>
      <net.java.html.version>1.8</net.java.html.version>
      <netbeans.compile.on.save>none</netbeans.compile.on.save>
      <trufflejs.jar>${project.build.directory}/test-classes</trufflejs.jar>
      <test.java.home>${java.home}</test.java.home>
      <javadoc.opts>-author</javadoc.opts>
  </properties>
  <modules>
    <module>ko</module>
    <module>launcher</module>
    <module>rt</module>
    <module>truffle</module>
  </modules>
  <licenses>
      <license>
          <name>GPL-2.0</name>
          <url>http://opensource.org/licenses/GPL-2.0</url>
          <distribution>repo</distribution>
      </license>
  </licenses>
  <organization>
      <name>API Design</name>
      <url>http://apidesign.org</url>
  </organization>
  <scm>
      <connection>scm:git:https://github.com/jtulach/bck2brwsr.git</connection>
      <developerConnection>scm:git:https://github.com/jtulach/bck2brwsr.git</developerConnection>
      <url>https://github.com/jtulach/bck2brwsr</url>
    <tag>HEAD</tag>
  </scm>
  <repositories>
      <!--
      <repository>
          <id>stagging</id>
          <name>Stagging</name>
          <url>https://maven.java.net/content/repositories/orgapidesign-1059/</url>
      </repository>
       -->
  </repositories>
  <pluginRepositories>
      <!--
      <pluginRepository>
          <id>stagging</id>
          <name>Stagging</name>
          <url>https://maven.java.net/content/repositories/orgapidesign-1059/</url>
      </pluginRepository>
      -->
  </pluginRepositories>
  <build>
      <plugins>
         <plugin>
              <inherited>false</inherited>
              <groupId>com.mycila</groupId>
              <artifactId>license-maven-plugin</artifactId>
              <version>3.0</version>
              <executions>
                  <execution>
                      <id>blah</id>
                      <goals>
                          <goal>check</goal>
                      </goals>
                  </execution>
              </executions>
              <configuration>
                  <aggregate>true</aggregate>
                  <basedir>${basedir}</basedir>
                  <header>COPYING</header>
                  <strictCheck>true</strictCheck>
                  <excludes>
                       <exclude>*</exclude>
                       <exclude>.*/**</exclude>
                       <exclude>rt/emul/mini/src/main/**</exclude>
                       <exclude>rt/emul/compact/src/main/**</exclude>
                       <exclude>rt/emul/zip/src/main/**</exclude>
                       <exclude>rt/vm/src/main/java/org/apidesign/vm4brwsr/ByteCodeParser.java</exclude>
                       <exclude>rt/archetype/src/main/resources/archetype-resources/**</exclude>
                       <exclude>rt/emul/*/src/test/resources/**</exclude>
                       <exclude>rt/aot-junit/**</exclude>
                       <exclude>javaquery/api/src/main/resources/org/apidesign/bck2brwsr/htmlpage/knockout*.js</exclude>
                       <exclude>ko/archetype/src/main/resources/archetype-resources/**</exclude>
                       <include>**/.scala</include>
                       <include>**/.kt</include>
                       <include>**/.gradle/**</include>
                       <include>**/gradle*/build/**</include>
                  </excludes>
                  <mapping>
                      <sbt>JAVADOC_STYLE</sbt>
                      <gradle>JAVADOC_STYLE</gradle>
                  </mapping>
                  <failIfUnknown>true</failIfUnknown>
              </configuration>
          </plugin>
           <plugin>
            <artifactId>maven-release-plugin</artifactId>
            <version>2.4</version>
            <configuration>
              <mavenExecutorId>forked-path</mavenExecutorId>
              <useReleaseProfile>false</useReleaseProfile>
              <arguments>-Pjvnet-release -Pgpg -DskipTests</arguments>
              <tag>release-${releaseVersion}</tag>
            </configuration>
          </plugin>
      </plugins>
      <pluginManagement>
          <plugins>
              <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.13</version>
                <configuration>
                    <additionalClasspathElements>
                        <element>${trufflejs.jar}</element>
                    </additionalClasspathElements>
                    <jvm>${test.java.home}/bin/java</jvm>
                    <systemProperties>
                        <vmtest.output>${project.build.directory}/jstests</vmtest.output>
                    </systemProperties>
                </configuration>
              </plugin>
              <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <skip>true</skip>
                    <additionalparam>${javadoc.opts}</additionalparam>
                </configuration>
              </plugin>
              <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
              </plugin>
              <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-compiler-plugin</artifactId>
                  <version>3.8.1</version>
                  <dependencies>
                      <dependency>
                          <groupId>org.frgaal</groupId>
                          <artifactId>compiler-maven-plugin</artifactId>
                          <version>15.0.0</version>
                      </dependency>
                  </dependencies>
                  <configuration>
                      <compilerId>frgaal</compilerId>
                      <source>15</source>
                      <target>8</target>
                      <testTarget>8</testTarget>
                      <compilerArgs>
                          <arg>-Xlint:deprecation</arg>
                          <arg>--enable-preview</arg>
                      </compilerArgs>
                  </configuration>
              </plugin>
          </plugins>
      </pluginManagement>
  </build>
  <dependencyManagement>
      <dependencies>
        <dependency>
          <groupId>org.testng</groupId>
          <artifactId>testng</artifactId>
          <version>6.8.21</version>
          <scope>test</scope>
          <exclusions>
            <exclusion>
              <artifactId>junit</artifactId>
              <groupId>junit</groupId>
            </exclusion>
          </exclusions>
        </dependency>
        <dependency>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-netbeans-modules-classfile</artifactId>
          <version>${netbeans.version}</version>
          <type>jar</type>
        </dependency>
        <dependency>
          <groupId>org.netbeans.api</groupId>
          <artifactId>org-openide-util-lookup</artifactId>
          <version>${netbeans.version}</version>
          <scope>compile</scope>
          <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-api-annotations-common</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-java-source</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-libs-javacapi</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.modules</groupId>
            <artifactId>org-netbeans-libs-javacimpl</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-spi-java-hints</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-parsing-api</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-spi-editor-hints</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-util</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-java-lexer</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-lexer</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-java-hints-test</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-libs-junit4</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.modules</groupId>
            <artifactId>org-netbeans-lib-nbjavac</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency> 
            <groupId>org.netbeans.modules</groupId>
            <artifactId>org-netbeans-modules-web-browser-api</artifactId>
            <version>${netbeans.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>org-netbeans-core</artifactId>
                    <groupId>org.netbeans.modules</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>org-netbeans-core-multiview</artifactId>
                    <groupId>org.netbeans.api</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>org-netbeans-libs-lucene</artifactId>
                    <groupId>org.netbeans.api</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>org-netbeans-modules-diff</artifactId>
                    <groupId>org.netbeans.api</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>org-netbeans-modules-editor-fold</artifactId>
                    <groupId>org.netbeans.api</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>org-netbeans-modules-editor-guards</artifactId>
                    <groupId>org.netbeans.api</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <artifactId>org-netbeans-modules-projectapi</artifactId>
            <groupId>org.netbeans.api</groupId>
            <type>jar</type>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm</artifactId>
            <version>9.2</version>
            <type>jar</type>
        </dependency>
      </dependencies>
  </dependencyManagement>
  <profiles>
      <profile>
          <id>jdk8</id>
          <activation>
              <file>
                  <exists>${java.home}/lib/ext/jfxrt.jar</exists>
              </file>
          </activation>
          <properties>
            <jfxrt.jar>${java.home}/lib/ext/jfxrt.jar</jfxrt.jar>
            <javadoc.opts>-Xdoclint:none</javadoc.opts>
          </properties>
      </profile>
      <profile>
          <id>jdk7</id>
          <activation>
              <file>
                  <exists>${java.home}/lib/jfxrt.jar</exists>
              </file>
          </activation>
          <properties>
            <jfxrt.jar>${java.home}/lib/jfxrt.jar</jfxrt.jar>
          </properties>
      </profile>
      <profile>
          <id>graalvm-old</id>
          <activation>
              <file>
                  <exists>${java.home}/language/js/trufflejs.jar</exists>
              </file>
          </activation>
          <properties>
              <trufflejs.jar>${java.home}/language/js/trufflejs.jar</trufflejs.jar>
          </properties>
      </profile>
      <profile>
          <id>graalvm-0.20</id>
          <activation>
              <file>
                  <exists>${java.home}/../../language/js/trufflejs.jar</exists>
              </file>
          </activation>
          <properties>
              <trufflejs.jar>${java.home}/../../language/js/trufflejs.jar</trufflejs.jar>
              <test.java.home>${java.home}/../../</test.java.home>
          </properties>
      </profile>
      <profile>
          <id>run-benchmarks</id>
          <activation>
              <property>
                  <name>!skip.benchmarks</name>
              </property>
          </activation>
          <modules>
              <module>benchmarks</module>
          </modules>
      </profile>
      <profile>
          <id>javaquery</id>
          <activation>
              <property>
                  <name>!skipTests</name>
              </property>
          </activation>
          <modules>
              <module>javaquery</module>
          </modules>
      </profile>
  </profiles>
</project>
